# docling-parser

./: .gitignore  docker-compose.yml  pyproject.toml
docling_parser/: agent_factory.py  agent_interface.py  ask.py  chainlit_app.py  index.py  llm_client_factory.py  log.txt  main.py  parser.py  response_strategy.py  retriever.py
docling_parser/.chainlit/: config.toml
docling_parser/dto/agent/: agent.py  agent_response.py
docling_parser/dto/rag/: retriever.py  self_rag_response.py
docling_parser/llm/: chat_client_factory.py  chat_generic_client.py  embeddings_client_factory.py  embeddings_generic_client.py
docling_parser/prompts/: AlfredSelfRag_collection_choose.prompt  JarvisSelfRag_collection_choose.prompt  answer_grader.prompt  hallucination_grader.prompt  rag_sp_system.prompt  rag_system.prompt  retrieval_grader.prompt  rewriter.prompt
docling_parser/retrievers/: merge_retriever.py  multi_query_retriever.py  rag_retriever_factory.py  self_query_retriever.py
docling_parser/selfrag/: graph.py  response.py  state.py
docling_parser/selfrag/adapters/: document_adapters.py
docling_parser/selfrag/chains/: collection_choose.py  retrieval_grader.py
docling_parser/selfrag/models/: alfred_document.py  collections.py  grade_document.py  self_rag_input.py
docling_parser/selfrag/nodes/: nodes.py
docling_parser/shared/: answer_generator.py  extract_step.py  generic_response_strategy.py
docling_parser/util/: logger.py  prompt_loader.py
